2006-09-07  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* new ast_graph option -page

	* snapshot hackery

2006-09-07  Hendrik Tews  <tews@debian>

	* minor_gc.html

2006-09-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* finshed index.html

2006-09-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* snapshot devel

2006-09-04  Hendrik Tews  <tews@debian>

	* started asttools/doc/index.html

2006-09-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added count-ast example

2006-09-01  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* add license/copyright/comments

	* move semantic to asttools

	* new option -inside for check-oast: descend into ast on error,
	trying to locate the problem

2006-08-29  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* rename ast/ast_util -> ast/astgen_util

	* bug hunting with ocaml-ty

2006-08-28  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* checked added/deleted files in the snapshot

2006-08-24  Hendrik Tews  <tews@debian>

	* develop snapshot script

2006-08-22  Hendrik Tews  <tews@debian>

	* prepare for snapshot

2006-08-22  Hendrik Tews  <tews@debian>

	ELSA
	* changed enum value field to nativeint

	SEMANTIC
	* fixed another dense set bug

2006-08-21  Hendrik Tews  <tews@debian>

	* configure/Makefile cleanup; use elsa configure system in
	  semantic subdir

2006-08-21  Hendrik Tews  <tews@debian>

	AST
	* changed ocaml serialization to strict left-to-right order 

	SEMANTIC
	* changed dot generation to strict left-to-right evaluation:
	  graphs should be generated left-to-right
	* added D_attribute case

2006-08-17  Hendrik Tews  <tews@debian>

	ELSA
	* D_attribute hack: gnu_attribute_hack.ast extends
	  iDeclarator_type
	* reordered classes in cc.ast Declarator/IDeclarator are at the
	  end now
	* D_attribute methods are in gnu.cc, callbacks are in
	  ml_ctype_constructors 
	

2006-08-17  Hendrik Tews  <tews@debian>

	* changed to native ocaml compilation (still need to clean up
	  Makefiles) 

	ELSA
	* fixed ocaml_val init in STemplateArgument

	Semantic