@@ -1,3 +1,12 @@
+crc-small.png
+crc.dot
+crc.oast
+crc.png
+crc.svg
+hello-world-border.png
+hello-world.dot
+hello-world.oast
+hello-world.png
 minor_gc-detail.png.gz
 minor_gc-pages.dot
 minor_gc-pages.ps
