@@ -1,62 +1,64 @@
-nonport
-voidlist
-tobjlist
+*.DSW
+*.LIB
+*.csm
+*.d
+*.i
+*.lib
+*.~DE
+.fsync-save
+Makefile
+Makefile.base.mk
+TAGS
+autofile
+bflatten
 bit2d
+bitarray
+boxprint
+changes
+config.status
+config.summary
+crc
+crc.ii
+crc.oast
+cycles
+dependencies.png
+diff
+examples
+fsyncd.log
+gendoc
+gmon.out
+gprintf
+gprof.out
 growbuf
-test.dir
-strdict
-svdict
+hashline
+hide
+history.txt
+make.out
+mypopen
+mysig
+nonport
+pprint
+smregexp
+srcloc
+srcloc.tmp
 str
+strdict
 strhash
 strhash_1
 strhash_2
-gmon.out
-fsyncd.log
-.fsync-save
-trdelete
-bflatten
-mysig
-Makefile.base.mk
-testmalloc
 strutil
-*.csm
-*.DSW
-*.~DE
-*.LIB
-*.lib
-*.d
-mypopen
-tmalloc
-tobjpool
-crc
-cycles
-dependencies.png
-tsobjlist
-*.i
-srcloc
-gprof.out
-config.status
-config.summary
-hide
-Makefile
-hashline
-srcloc.tmp
-gendoc
-testcout
-gprintf
-smregexp
-vptrmap
-pprint
-vdtllist
-boxprint
-TAGS
-tarrayqueue
-testarray
-diff
-examples
+svdict
 taillist_test
-autofile
-changes
-history.txt
-make.out
-bitarray
+tarrayqueue
+test.dir
+testarray
+testcout
+testmalloc
+tmalloc
+tobjlist
+tobjpool
+trdelete
+tsobjlist
+vdtllist
+voidlist
+vptrmap
